# satisfactory_planner

./: Cargo.toml  LICENSE
planner_lib/: Cargo.toml
planner_lib/src/: error.rs  lib.rs  recipe_graph.rs  registry.rs
planner_lib/src/buildings/: building.rs  mod.rs
planner_lib/src/items/: item.rs  mod.rs  recipe.rs
planner_registry/: Cargo.toml
planner_registry/src/: lib.rs  registry_data.rs
planner_registry/src/buildings/: building.rs
planner_registry/src/items/: item.rs  mod.rs  recipe.rs
planner_ui/: index.html  package.json  rsw.toml  vite.config.ts  vite.config.ts.timestamp-1673873407357.mjs
planner_ui/.rsw/: rsw.crates  rsw.err  rsw.info
planner_ui/@rsw/planner_lib_wasm/: Cargo.toml  LICENSE_MIT
planner_ui/@rsw/planner_lib_wasm/src/: lib.rs
planner_ui/src/: App.css  App.tsx  main.tsx
planner_ui/src/components/: FactoryVisualization.tsx  InfoLine.tsx  Material.tsx  Navbar.tsx  QueryBar.tsx
planner_ui/src/components/factoryVisualization/: FactoryVisualization.css  FactoryVisualization.tsx  MachineData.ts
planner_ui/src/components/material/: MaterialDisplay.tsx  MaterialIcon.tsx  MaterialInput.tsx
planner_ui/src/components/recipe/: RecipeView.tsx
planner_ui/src/components/summary/: BuildingSummary.tsx  Byproducts.tsx  InfoLine.tsx  PartsList.tsx  Power.tsx  Product.tsx  RawMaterials.tsx
planner_ui/src/data/: Item.ts  ItemRate.ts  Recipe.ts
planner_ui/src/virtualization/: ListboxComponent.tsx
