[package]
name = "planner_lib"
version = "0.1.0"
authors = ["funlennysub", "localcc <work@localcc.cc>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
planner_registry.workspace = true
lazy_static = "1.4.0"

wasm-bindgen = { version = "0.2.63", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.4.5", optional = true }
js-sys = { version = "0.3.61", optional = true }

[features]
bindgen = ["dep:wasm-bindgen", "planner_registry/bindgen", "dep:serde", "dep:serde-wasm-bindgen", "dep:js-sys"]
