[package]
name = "planner_registry"
version = "0.2.0"
authors = ["funlennysub", "localcc <work@localcc.cc>"]
license = "MIT"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.63", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.4.5", optional = true }

[features]
bindgen = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]