[package]
name = "planner_registry"
version = "0.2.0"
authors = ["funlennysub", "localcc <work@localcc.cc>"]
license = "MIT"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.84", optional = true }
serde = { version = "1.0.162", features = ["derive", "rc"], optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }

[features]
bindgen = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]
