[package]
name = "planner_lib_wasm"
version = "0.1.0"
authors = ["localcc <work@localcc.cc>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.5" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

[dependencies.planner_lib]
workspace = true
features = ["bindgen"]